# VA_learning

./: README.md
network_program_base/: README.md
network_program_base/HTTP/: CMakeLists.txt
network_program_base/HTTP/include/client/: request.h
network_program_base/HTTP/include/server/: server.h
network_program_base/HTTP/include/utils/: base64.h  common.h  log.h
network_program_base/HTTP/src/: client_main.cpp  server_main.cpp
network_program_base/HTTP/src/client/: main.cpp  request.cpp
network_program_base/HTTP/src/server/: server.cpp
network_program_base/HTTP/src/utils/: base64.cpp  common.cpp  log.cpp
network_program_base/HTTP/utils/: base64.cpp  base64.h  common.cpp  common.h  log.cpp  log.h
network_program_base/RTSP/: main.cpp  rtp.cpp  rtp.h
network_program_base/RTSP/data/: test.aac
network_program_base/TCP/: client.cpp  server1.cpp
network_program_base/TCP/client/: main.cpp
network_program_base/TCP/server/block/: main.cpp
network_program_base/TCP/server/epoll/: main.cpp
network_program_base/TCP/server/multithread/: main.cpp
network_program_base/TCP/server/poll/: main.cpp
network_program_base/TCP/server/select/: main.cpp
simplest_mediadata_process/: README.md  aac.cpp  aac.h  flv.cpp  flv.h  h264.cpp  h264.h  main.cpp  pcm.cpp  pcm.h  pixel.cpp  pixel.h  udp.cpp  udp.h
simplest_mediadata_process/output/: NocturneNo2inEflat_44.1k_s16le.pkf  aac.txt  cut.txt  flv.txt  graybar420.yuv  h264.txt  udp.ts
